[feat]: [AH-724]: ECR upstream proxy support (#3181)
* [fix]: [AH-724]: pr checks
* [fix]: [AH-724]: pr checks
* [fix]: [AH-724]: pr checks
* [fix]: [AH-724]: fix upstream proxy update
* [fix]: [AH-724]: fix upstream proxy update
* [fix]: [AH-724]: fix upstream proxy update
* Merge branch 'main' of https://git0.harness.io/l7B_kbSEQD2wjrM7PShm5w/PROD/Harness_Commons/gitness into AH-724-schema-change
* [feat]: [AH-724]: ECR upstream proxy support
