# registry/app/api/openapi/api.yaml
@@ -1490,6 +1490,7 @@ components:
           oneOf:
             - $ref: "#/components/schemas/UserPassword"
             - $ref: "#/components/schemas/Anonymous"
+            - $ref: "#/components/schemas/AccessKeySecretKey"
         url:
           type: string
         source:
@@ -1497,6 +1498,7 @@ components:
           enum:
             - Dockerhub
             - Custom
+            - AwsEcr
       x-discriminator-value: UPSTREAM
       required:
         - authType
@@ -1544,6 +1546,7 @@ components:
       description: "Authentication type"
       enum:
         - UserPassword
+        - AccessKeySecretKey
         - Anonymous
     ClientSetupStepType:
       type: string
@@ -1625,9 +1628,28 @@ components:
           type: string
         secretSpacePath:
           type: string
+        secretSpaceId:
+          type: integer
       required:
         - userName
-        - password
+    AccessKeySecretKey:
+      properties:
+        accessKey:
+          type: string
+        accessKeySecretIdentifier:
+          type: string
+        accessKeySecretSpacePath:
+          type: string
+        accessKeySecretSpaceId:
+          type: integer
+        secretKeyIdentifier:
+          type: string
+        secretKeySpacePath:
+          type: string
+        secretKeySpaceId:
+          type: integer
+      required:
+        - secretKeyIdentifier
     Anonymous: {}
   parameters:
     spaceRefQueryParam:
