# registry/app/api/openapi/contracts/artifact/types.gen.go
@@ -1,6 +1,6 @@
 // Package artifact provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package artifact
 
 import (
@@ -13,8 +13,9 @@ import (
 
 // Defines values for AuthType.
 const (
-	AuthTypeAnonymous    AuthType = "Anonymous"
-	AuthTypeUserPassword AuthType = "UserPassword"
+	AuthTypeAccessKeySecretKey AuthType = "AccessKeySecretKey"
+	AuthTypeAnonymous          AuthType = "Anonymous"
+	AuthTypeUserPassword       AuthType = "UserPassword"
 )
 
 // Defines values for ClientSetupStepType.
@@ -46,6 +47,7 @@ const (
 
 // Defines values for UpstreamConfigSource.
 const (
+	UpstreamConfigSourceAwsEcr    UpstreamConfigSource = "AwsEcr"
 	UpstreamConfigSourceCustom    UpstreamConfigSource = "Custom"
 	UpstreamConfigSourceDockerhub UpstreamConfigSource = "Dockerhub"
 )
@@ -61,6 +63,17 @@ const (
 	GetAllRegistriesParamsTypeUPSTREAM GetAllRegistriesParamsType = "UPSTREAM"
 	GetAllRegistriesParamsTypeVIRTUAL  GetAllRegistriesParamsType = "VIRTUAL"
 )
+
+// AccessKeySecretKey defines model for AccessKeySecretKey.
+type AccessKeySecretKey struct {
+	AccessKey                 *string `json:"accessKey,omitempty"`
+	AccessKeySecretIdentifier *string `json:"accessKeySecretIdentifier,omitempty"`
+	AccessKeySecretSpaceId    *int    `json:"accessKeySecretSpaceId,omitempty"`
+	AccessKeySecretSpacePath  *string `json:"accessKeySecretSpacePath,omitempty"`
+	SecretKeyIdentifier       string  `json:"secretKeyIdentifier"`
+	SecretKeySpaceId          *int    `json:"secretKeySpaceId,omitempty"`
+	SecretKeySpacePath        *string `json:"secretKeySpacePath,omitempty"`
+}
 
 // Anonymous defines model for Anonymous.
 type Anonymous interface{}
@@ -453,6 +466,7 @@ type UpstreamConfigSource string
 // UserPassword defines model for UserPassword.
 type UserPassword struct {
 	SecretIdentifier *string `json:"secretIdentifier,omitempty"`
+	SecretSpaceId    *int    `json:"secretSpaceId,omitempty"`
 	SecretSpacePath  *string `json:"secretSpacePath,omitempty"`
 	UserName         string  `json:"userName"`
 }
@@ -1044,6 +1058,32 @@ func (t *UpstreamConfig_Auth) FromAnonymous(v Anonymous) error {
 
 // MergeAnonymous performs a merge with any union data inside the UpstreamConfig_Auth, using the provided Anonymous
 func (t *UpstreamConfig_Auth) MergeAnonymous(v Anonymous) error {
+	b, err := json.Marshal(v)
+	if err != nil {
+		return err
+	}
+
+	merged, err := runtime.JSONMerge(t.union, b)
+	t.union = merged
+	return err
+}
+
+// AsAccessKeySecretKey returns the union data inside the UpstreamConfig_Auth as a AccessKeySecretKey
+func (t UpstreamConfig_Auth) AsAccessKeySecretKey() (AccessKeySecretKey, error) {
+	var body AccessKeySecretKey
+	err := json.Unmarshal(t.union, &body)
+	return body, err
+}
+
+// FromAccessKeySecretKey overwrites any union data inside the UpstreamConfig_Auth as the provided AccessKeySecretKey
+func (t *UpstreamConfig_Auth) FromAccessKeySecretKey(v AccessKeySecretKey) error {
+	b, err := json.Marshal(v)
+	t.union = b
+	return err
+}
+
+// MergeAccessKeySecretKey performs a merge with any union data inside the UpstreamConfig_Auth, using the provided AccessKeySecretKey
+func (t *UpstreamConfig_Auth) MergeAccessKeySecretKey(v AccessKeySecretKey) error {
 	b, err := json.Marshal(v)
 	if err != nil {
 		return err
